Fixed styles for description & collapsing

--- a/src/client/components/rooms-table/index.scss
+++ b/src/client/components/rooms-table/index.scss
@@ -2,10 +2,6 @@
     text-align: center;
 }
 
-.description-expandable {
-
-}
-
-.description {
-
+.room-description {
+    font-weight: 300;
 }
